<resources>
    <string name="app_name">RecyclerViewAssignment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="forward_btn_text">Send</string>
    <string name="send_to_email_hint">email@email.com</string>
    <string name="send_to_name">First Name Last Name</string>
    <string name="forward_message">Forward Message</string>
    <string name="email_text">Email:</string>
    <string name="name_text">Name:</string>
    <string name="message_text">Message:</string>
    <string name="delete_text">Delete</string>
    <string name="email_deleted">Email has been deleted.</string>
    <string name="email_forwarded">Email has been forwarded.</string>
    <string name="forward">Forward</string>

</resources>