<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_mxlarge"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/spacing_middle"
        android:text="@string/forward_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/spacing_smlarge"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/email_text"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_to_email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forward_emailTF"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:text="@string/name_text"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_to_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forward_nameTF"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/messageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:text="@string/message_text"
            android:textSize="@dimen/spacing_smlarge"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/lorem_ipsum">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forward_contentTF"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_margin="@dimen/spacing_middle" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forward_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forward_btn_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/spacing_large" />
    </LinearLayout>
</LinearLayout>